--- a/mobile-app-ws/pom.xml
+++ b/mobile-app-ws/pom.xml
@@ -46,6 +46,13 @@
 		    <version>0.9.1</version>
 		</dependency>	
 		
+		<!-- from www.modelmapper.org -->
+		<dependency>
+		  <groupId>org.modelmapper</groupId>
+		  <artifactId>modelmapper</artifactId>
+		  <version>2.4.2</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.dataformat</groupId>
