--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.username=georgi
-spring.datasource.password=test1234
+spring.datasource.username=ENC(6Avs9rYh9HLZjaWe/AvjxA==)
+spring.datasource.password=ENC(Utvv9cWQ2Bk+gkuT0qVKRAS8Oc47CPMG)
 spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-tokenSecret = jf9i4jgu83nfl0
+tokenSecret = ENC(inkm5C4UjS0mak/UIp1FU5A4JXNH93zg)
 server.servlet.context-path=/mobile-app-ws
+jasypt.encryptor.algorithm=PBEWithMD5AndTripleDES
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
+jasypt.encryptor.password=abcd1234
