Fixing getUser on login. ModelMapper is now allowed

--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -10,4 +10,4 @@ server.servlet.context-path=/mobile-app-ws
 jasypt.encryptor.algorithm=PBEWithMD5AndTripleDES
 jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
 jasypt.encryptor.password=abcd1234
-logging.level.org.springframework.transaction.interceptor = TRACE
+#logging.level.org.springframework.transaction.interceptor = TRACE
