--- a/mobile-app-ws/pom.xml
+++ b/mobile-app-ws/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.appsdeveloperblog.app.ws</groupId>
 	<artifactId>mobile-app-ws</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>mobile-app-ws</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
